# libmisc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
code/: CairoText.cpp  CairoText.hpp  Expr.hpp  KeyValues.cpp  KeyValues.hpp
include/libmisc/: strtools.hpp  timer.hpp
include/libmisc/bits/: libmisc.hpp
test/: cairo-test.cpp  expr-test.cpp  gen-test.py  libmisc_test.cpp  run-test.sh  test_common.h
